# pytorch-projects

./: README.md  hello.py  pyproject.toml
notebooks/: time-series-with-pytorch.ipynb
src/: tf_pytorch.py  torch_basic.py  torch_basic_methods.py  torchvision_object_detection.py  utils.py
src/model_demo/: Dockerfile  README.md  config.py  data_prep.py  fast_api.py  model_demo.py  submit_for_inference.py  utils.py
src/torch_basic/: D2L_pytorch_ML.py  PyTorch_model_to_ONNX.py  PyTorch_nn_models.py  attention_demo_code.py  pytorch-forecasting-template.py  tf_pytorch.py  time-series-with-pytorch.py  torch_basic.py  utils.py
templates/: batch_predict.html  index.html  main.html  predict.html
